@@ -1,6 +1,7 @@
 v2.0.5 (?????)
 - New script (sipflood.pl) to send unlimited messages to the target
 - sipcracker.pl: if all password are found, the script ends
+- sipdigestleak.pl: added cnonce, nc and qop params when export files with sipdump format
 
 v2.0.4 (Aug/2020)
 - Hostname to IP address resolution
@@ -27,7 +28,7 @@ v2.0.0 (Dec/2019)
 
 v1.2.13 (Oct/2019)
 - New param (-version) to show current version and check for new updates
-- sipscan.pl: New optinal param (-web) to check for a control panel
+- sipscan.pl: New optional param (-web) to check for a control panel
 - sipinvite.pl: New param (-log) to save data into a log file
 
 v1.2.12 (Oct/2019)
